更新個人資訊

--- a/content/參考.html
+++ b/content/參考.html
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='HW.html'>HW</a><ul class='dropdown'><li class='has-children'><a href='W5.html'>W5</a><ul class='dropdown'><li><a href='密碼亂數.html'>密碼亂數</a></li></ul><li class='has-children'><a href='W6.html'>W6</a><ul class='dropdown'><li><a href='抽點.html'>抽點</a><li><a href='rotating block.html'>rotating block</a><li><a href='test.html'>test</a></li></ul><li class='has-children'><a href='W10.html'>W10</a><ul class='dropdown'><li><a href='作業程式.html'>作業程式</a></li></ul><li class='has-children'><a href='W11.html'>W11</a><ul class='dropdown'><li><a href='參考.html'>參考</a></li></ul><li class='has-children'><a href='W13.html'>W13</a><ul class='dropdown'><li><a href='溫度轉換.html'>溫度轉換</a></li></li></ul></ul><li><a href='心得.html'>心得</a><li><a href='cp2022H1.html'>cp2022H1</a><li><a href='cp2022.html'>cp2022</a><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='HW.html'>HW</a><ul class='dropdown'><li class='has-children'><a href='W5.html'>W5</a><ul class='dropdown'><li><a href='密碼亂數.html'>密碼亂數</a></li></ul><li class='has-children'><a href='W6.html'>W6</a><ul class='dropdown'><li><a href='抽點.html'>抽點</a><li><a href='奇怪的3D方塊.html'>奇怪的3D方塊</a><li><a href='test.html'>test</a></li></ul><li class='has-children'><a href='W10.html'>W10</a><ul class='dropdown'><li><a href='作業程式.html'>作業程式</a></li></ul><li class='has-children'><a href='W12.html'>W12</a><ul class='dropdown'><li><a href='參考.html'>參考</a></li></ul><li class='has-children'><a href='W13.html'>W13</a><ul class='dropdown'><li><a href='溫度轉換.html'>溫度轉換</a></li></li></ul></ul><li><a href='心得.html'>心得</a><li><a href='cp2022H1.html'>cp2022H1</a><li><a href='cp2022.html'>cp2022</a><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -141,9 +141,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W11 << <a href='W11.html'>Previous</a> <a href='W13.html'>Next</a> >> W13<br /><h1>參考</h1>
-<p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/a5af95f622379099d5d72e30d1e265a6/raw/9615223abccf2a15b29cd8c3824b38e0f5cf702f/gistfile1.txt">w11作業參考程式</a></p>
-<br />W11 << <a href='W11.html'>Previous</a> <a href='W13.html'>Next</a> >> W13</div>
+    <div id="tipue_search_content">W12 << <a href='W12.html'>Previous</a> <a href='W13.html'>Next</a> >> W13<br /><h1>參考</h1>
+<p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/a5af95f622379099d5d72e30d1e265a6/raw/9615223abccf2a15b29cd8c3824b38e0f5cf702f/gistfile1.txt"><span>點這裡執行:</span>w11作業參考程式</a></p>
+<br />W12 << <a href='W12.html'>Previous</a> <a href='W13.html'>Next</a> >> W13</div>
         
     <!-- footer -->
       <div class="container">
