--- a/content/溫度轉換.html
+++ b/content/溫度轉換.html
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='HW.html'>HW</a><ul class='dropdown'><li class='has-children'><a href='W5.html'>W5</a><ul class='dropdown'><li><a href='密碼亂數.html'>密碼亂數</a></li></ul><li class='has-children'><a href='W6.html'>W6</a><ul class='dropdown'><li><a href='抽點.html'>抽點</a><li><a href='rotating block.html'>rotating block</a><li><a href='test.html'>test</a></li></ul><li class='has-children'><a href='W10.html'>W10</a><ul class='dropdown'><li><a href='作業程式.html'>作業程式</a></li></ul><li class='has-children'><a href='W11.html'>W11</a><ul class='dropdown'><li><a href='參考.html'>參考</a></li></ul><li class='has-children'><a href='W13.html'>W13</a><ul class='dropdown'><li><a href='溫度轉換.html'>溫度轉換</a></li></li></ul></ul><li><a href='心得.html'>心得</a><li><a href='cp2022H1.html'>cp2022H1</a><li><a href='cp2022.html'>cp2022</a><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='HW.html'>HW</a><ul class='dropdown'><li class='has-children'><a href='W5.html'>W5</a><ul class='dropdown'><li><a href='密碼亂數.html'>密碼亂數</a></li></ul><li class='has-children'><a href='W6.html'>W6</a><ul class='dropdown'><li><a href='抽點.html'>抽點</a><li><a href='奇怪的3D方塊.html'>奇怪的3D方塊</a><li><a href='test.html'>test</a></li></ul><li class='has-children'><a href='W10.html'>W10</a><ul class='dropdown'><li><a href='作業程式.html'>作業程式</a></li></ul><li class='has-children'><a href='W12.html'>W12</a><ul class='dropdown'><li><a href='參考.html'>參考</a></li></ul><li class='has-children'><a href='W13.html'>W13</a><ul class='dropdown'><li><a href='溫度轉換.html'>溫度轉換</a></li></li></ul></ul><li><a href='心得.html'>心得</a><li><a href='cp2022H1.html'>cp2022H1</a><li><a href='cp2022.html'>cp2022</a><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,8 +142,8 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">W13 << <a href='W13.html'>Previous</a> <a href='心得.html'>Next</a> >> 心得<br /><h1>溫度轉換</h1>
-<p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/b543dca427faafa9508ec31e8f6e1e8b/raw/029b1f8b5d1ce03f49f3dbd274b74027b6363f00/w13temp_ex1.py">w13溫度轉換程式</a>ex1</p>
-<p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/b543dca427faafa9508ec31e8f6e1e8b/raw/cc13a508c73ea94e43dc7203930d197f9b774a9b/w13temp_ex2.py">w13溫度轉換程式</a>ex2</p>
+<p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/b543dca427faafa9508ec31e8f6e1e8b/raw/029b1f8b5d1ce03f49f3dbd274b74027b6363f00/w13temp_ex1.py"><span>點這裡執行:</span>w13溫度轉換程式</a>ex1</p>
+<p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/b543dca427faafa9508ec31e8f6e1e8b/raw/cc13a508c73ea94e43dc7203930d197f9b774a9b/w13temp_ex2.py"><span>點這裡執行:</span>w13溫度轉換程式</a>ex2</p>
 <br />W13 << <a href='W13.html'>Previous</a> <a href='心得.html'>Next</a> >> 心得</div>
         
     <!-- footer -->
