--- a/content/密碼亂數.html
+++ b/content/密碼亂數.html
@@ -142,7 +142,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">W5 << <a href='W5.html'>Previous</a> <a href='W6.html'>Next</a> >> W6<br /><h1>密碼亂數</h1>
-<p>點這裡執行:<a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/30c62a93156cde2b95f2ba0a46fe8829/raw/40bf3d979c6c7e826b9846d6cb8c77a4f345d2e8/password_generator.py">w5 passwod generator</a></p>
+<p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/30c62a93156cde2b95f2ba0a46fe8829/raw/40bf3d979c6c7e826b9846d6cb8c77a4f345d2e8/password_generator.py"><span>點這裡執行</span>w5 passwod generator</a></p>
 <br />W5 << <a href='W5.html'>Previous</a> <a href='W6.html'>Next</a> >> W6</div>
         
     <!-- footer -->
