--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,5 +1,6 @@
 <h1>About</h1>
 <p>           <img alt="" height="195" src="/images/20220412005788.jpg" width="253"/>    </p>
+<p>仔細看這個男人太狠了他居然把網頁名稱取得這麼中二,還把<span>現任臺北市市長的照片放在首頁</span></p>
 <p>41123147蔡承翰</p>
 <p>githib倉儲:<a href="https://github.com/mdecp2022/site-hank474">mdecp2022/site-hank474: site-hank474 created by GitHub Classroom</a></p>
 <p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/6ffcc2daa0df10df43d672fd0151f109/raw/90d6e812f8706967b47d4d4452bd575a1eeafd9d/%25E6%2596%25B0.cp%25E6%258A%25BD%25E9%25BB%259E"></a></p>
@@ -8,20 +9,20 @@
 <h1>HW</h1>
 <h2>W5</h2>
 <h3>密碼亂數</h3>
-<p>點這裡執行:<a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/30c62a93156cde2b95f2ba0a46fe8829/raw/40bf3d979c6c7e826b9846d6cb8c77a4f345d2e8/password_generator.py">w5 passwod generator</a></p>
+<p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/30c62a93156cde2b95f2ba0a46fe8829/raw/40bf3d979c6c7e826b9846d6cb8c77a4f345d2e8/password_generator.py"><span>點這裡執行</span>w5 passwod generator</a></p>
 <h2>W6</h2>
 <h3>抽點</h3>
-<p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/6ffcc2daa0df10df43d672fd0151f109/raw/90d6e812f8706967b47d4d4452bd575a1eeafd9d/%25E6%2596%25B0.cp%25E6%258A%25BD%25E9%25BB%259E"><span>點這裡執行:</span>新.cp抽點</a></p>
-<p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/15b41241c5ef5b90504d49751d95c6e8/raw/6e778c2be3fc71d3c43980f1bdff8daa18fbae43/%25E6%2596%25B0.%25E6%258A%25BD5%25E5%2590%258D" rel="noreferrer noopener" tabindex="-1" target="_blank" title="https://mdecp2022.github.io/site-hank474/content/Brython.html?src=https://gist.githubusercontent.com/hank474/15b41241c5ef5b90504d49751d95c6e8/raw/6e778c2be3fc71d3c43980f1bdff8daa18fbae43/%25E6%2596%25B0.%25E6%258A%25BD5%25E5%2590%258D"><span>點這裡執行:</span>個人靜態網頁執行抽5名</a></p>
-<p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/8bf92c7f4686b50b1e11972cbc8362a9/raw/507071d4d4a1ede10dfdfaa411a0db154ea19090/random_draw.py&amp;src2=https://gist.githubusercontent.com/hank474/8bf92c7f4686b50b1e11972cbc8362a9/raw/b1854861f8399ce7daf471638f6f183907d0e94f/list.py"><span>點這裡執行:</span>抽點程式與擷取個人靜態網頁程式結合</a></p>
+<p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/6ffcc2daa0df10df43d672fd0151f109/raw/90d6e812f8706967b47d4d4452bd575a1eeafd9d/%25E6%2596%25B0.cp%25E6%258A%25BD%25E9%25BB%259E"><span>點這裡執行</span>新.cp抽點</a></p>
+<p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/15b41241c5ef5b90504d49751d95c6e8/raw/6e778c2be3fc71d3c43980f1bdff8daa18fbae43/%25E6%2596%25B0.%25E6%258A%25BD5%25E5%2590%258D" rel="noreferrer noopener" tabindex="-1" target="_blank" title="https://mdecp2022.github.io/site-hank474/content/Brython.html?src=https://gist.githubusercontent.com/hank474/15b41241c5ef5b90504d49751d95c6e8/raw/6e778c2be3fc71d3c43980f1bdff8daa18fbae43/%25E6%2596%25B0.%25E6%258A%25BD5%25E5%2590%258D"><span>點這裡執行</span>個人靜態網頁執行抽5名</a></p>
+<p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/8bf92c7f4686b50b1e11972cbc8362a9/raw/507071d4d4a1ede10dfdfaa411a0db154ea19090/random_draw.py&amp;src2=https://gist.githubusercontent.com/hank474/8bf92c7f4686b50b1e11972cbc8362a9/raw/b1854861f8399ce7daf471638f6f183907d0e94f/list.py"><span>點這裡執行</span>抽點程式與擷取個人靜態網頁程式結合</a></p>
 <h3>奇怪的3D方塊</h3>
-<p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/b49752d17bb373d8b4444e903c460a1e/raw/ea080310e5941c4e653b344d894b1c9858b4e2cb/Rotating%2520Block.py"><span>點這裡執行:</span>w6 rotating block</a></p>
+<p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/b49752d17bb373d8b4444e903c460a1e/raw/ea080310e5941c4e653b344d894b1c9858b4e2cb/Rotating%2520Block.py"><span>點這裡執行</span>w6 rotating block</a></p>
 <h3>test</h3>
-<p><a href="https://mdecp2022.github.io/site-hank474/content/Brython.html?src=https://gist.githubusercontent.com/hank474/8bf92c7f4686b50b1e11972cbc8362a9/raw/507071d4d4a1ede10dfdfaa411a0db154ea19090/random_draw.py&amp;src2=https://gist.githubusercontent.com/hank474/8bf92c7f4686b50b1e11972cbc8362a9/raw/b1854861f8399ce7daf471638f6f183907d0e94f/list.py"><span>點這裡執行:</span>結合測試</a></p>
+<p><a href="https://mdecp2022.github.io/site-hank474/content/Brython.html?src=https://gist.githubusercontent.com/hank474/8bf92c7f4686b50b1e11972cbc8362a9/raw/507071d4d4a1ede10dfdfaa411a0db154ea19090/random_draw.py&amp;src2=https://gist.githubusercontent.com/hank474/8bf92c7f4686b50b1e11972cbc8362a9/raw/b1854861f8399ce7daf471638f6f183907d0e94f/list.py"><span>點這裡執行</span>結合測試</a></p>
 <h2>W10</h2>
 <h3>作業程式</h3>
-<p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022?htmlsrc=https://gist.githubusercontent.com/hank474/9f0bf6c173aca573f204eaf3061bb2b7/raw/97d2fc2bb9932ca96e1d927d5c107fb03bdd3b8c/gistfile1.txt"><span>點這裡執行:</span>w10 hw1</a></p>
-<p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/e934816cc574e6a2836eea62c1e7a4c8/raw/c4d9d9b97f92c1e7f8f94652b4a2fb20414b3fcc/gistfile1.txt"><span>點這裡執行:</span>w10 hw2</a></p>
+<p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022?htmlsrc=https://gist.githubusercontent.com/hank474/9f0bf6c173aca573f204eaf3061bb2b7/raw/97d2fc2bb9932ca96e1d927d5c107fb03bdd3b8c/gistfile1.txt"><span>點這裡執行</span>w10 hw1</a></p>
+<p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/e934816cc574e6a2836eea62c1e7a4c8/raw/c4d9d9b97f92c1e7f8f94652b4a2fb20414b3fcc/gistfile1.txt"><span>點這裡執行</span>w10 hw2</a></p>
 <h2>W12</h2>
 <h3>參考</h3>
 <p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/a5af95f622379099d5d72e30d1e265a6/raw/9615223abccf2a15b29cd8c3824b38e0f5cf702f/gistfile1.txt"><span>點這裡執行:</span>w11作業參考程式</a></p>
