--- a/content/作業程式.html
+++ b/content/作業程式.html
@@ -142,8 +142,8 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">W10 << <a href='W10.html'>Previous</a> <a href='W12.html'>Next</a> >> W12<br /><h1>作業程式</h1>
-<p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022?htmlsrc=https://gist.githubusercontent.com/hank474/9f0bf6c173aca573f204eaf3061bb2b7/raw/97d2fc2bb9932ca96e1d927d5c107fb03bdd3b8c/gistfile1.txt"><span>點這裡執行:</span>w10 hw1</a></p>
-<p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/e934816cc574e6a2836eea62c1e7a4c8/raw/c4d9d9b97f92c1e7f8f94652b4a2fb20414b3fcc/gistfile1.txt"><span>點這裡執行:</span>w10 hw2</a></p>
+<p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022?htmlsrc=https://gist.githubusercontent.com/hank474/9f0bf6c173aca573f204eaf3061bb2b7/raw/97d2fc2bb9932ca96e1d927d5c107fb03bdd3b8c/gistfile1.txt"><span>點這裡執行</span>w10 hw1</a></p>
+<p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/e934816cc574e6a2836eea62c1e7a4c8/raw/c4d9d9b97f92c1e7f8f94652b4a2fb20414b3fcc/gistfile1.txt"><span>點這裡執行</span>w10 hw2</a></p>
 <br />W10 << <a href='W10.html'>Previous</a> <a href='W12.html'>Next</a> >> W12</div>
         
     <!-- footer -->
