--- a/content/奇怪的3D方塊.html
+++ b/content/奇怪的3D方塊.html
@@ -142,7 +142,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">抽點 << <a href='抽點.html'>Previous</a> <a href='test.html'>Next</a> >> test<br /><h1>奇怪的3D方塊</h1>
-<p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/b49752d17bb373d8b4444e903c460a1e/raw/ea080310e5941c4e653b344d894b1c9858b4e2cb/Rotating%2520Block.py"><span>點這裡執行:</span>w6 rotating block</a></p>
+<p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/b49752d17bb373d8b4444e903c460a1e/raw/ea080310e5941c4e653b344d894b1c9858b4e2cb/Rotating%2520Block.py"><span>點這裡執行</span>w6 rotating block</a></p>
 <br />抽點 << <a href='抽點.html'>Previous</a> <a href='test.html'>Next</a> >> test</div>
         
     <!-- footer -->
