--- a/content/w11.html
+++ b/content/w11.html
@@ -2,7 +2,7 @@
         <head>
         <title>cmsite</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -141,8 +141,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='W5.html'>Next</a> >> W5<br /><h1>HW</h1>
-<br />About << <a href='About.html'>Previous</a> <a href='W5.html'>Next</a> >> W5</div>
+    <div id="tipue_search_content">作業程式 << <a href='作業程式.html'>Previous</a> <a href='老師的繪畫方格.html'>Next</a> >> 老師的繪畫方格<br /><h1>w11</h1>
+<br />作業程式 << <a href='作業程式.html'>Previous</a> <a href='老師的繪畫方格.html'>Next</a> >> 老師的繪畫方格</div>
         
     <!-- footer -->
       <div class="container">
