--- a/content/筆記.html
+++ b/content/筆記.html
@@ -141,8 +141,11 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='W5.html'>Next</a> >> W5<br /><h1>HW</h1>
-<br />About << <a href='About.html'>Previous</a> <a href='W5.html'>Next</a> >> W5</div>
+    <div id="tipue_search_content">溫度轉換 << <a href='溫度轉換.html'>Previous</a> <a href='心得.html'>Next</a> >> 心得<br /><h1>筆記</h1>
+<div>import:導入 <span class="TextRun BCX8 SCXO144150767" data-contrast="auto" lang="ZH-TW" xml:lang="ZH-TW"><span class="NormalTextRun BCX8 SCXO144150767">print:列出</span></span></div>
+<div><span class="TextRun BCX8 SCXO144150767" data-contrast="auto" lang="ZH-TW" xml:lang="ZH-TW"><span class="NormalTextRun BCX8 SCXO144150767"><span class="TextRun SCXO162626442 BCX8" data-contrast="auto" lang="ZH-TW" xml:lang="ZH-TW"><span class="NormalTextRun SCXO162626442 BCX8">keyword:關鍵字=</span></span></span></span></div>
+<div><span class="TextRun BCX8 SCXO144150767" data-contrast="auto" lang="ZH-TW" xml:lang="ZH-TW"><span class="NormalTextRun BCX8 SCXO144150767"><span class="TextRun SCXO162626442 BCX8" data-contrast="auto" lang="ZH-TW" xml:lang="ZH-TW"><span class="NormalTextRun SCXO162626442 BCX8"><span class="TextRun BCX8 SCXO69250940" data-contrast="auto" lang="ZH-TW" xml:lang="ZH-TW"><span class="NormalTextRun BCX8 SCXO69250940">['False', 'None', 'True', 'and', 'as', 'assert', 'async', 'await', 'break', 'class', 'continue', 'def', 'del', 'elif', 'else', 'except', 'finally', 'for', 'from', 'global', 'if', 'import', 'in', 'is', 'lambda', 'nonlocal', 'not', 'or', 'pass', 'raise', 'return', 'try', 'while', 'with', 'yield']</span></span></span></span></span></span></div>
+<br />溫度轉換 << <a href='溫度轉換.html'>Previous</a> <a href='心得.html'>Next</a> >> 心得</div>
         
     <!-- footer -->
       <div class="container">
