--- a/content/筆記.html
+++ b/content/筆記.html
@@ -142,9 +142,13 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">溫度轉換 << <a href='溫度轉換.html'>Previous</a> <a href='心得.html'>Next</a> >> 心得<br /><h1>筆記</h1>
-<div>import:導入 <span class="TextRun BCX8 SCXO144150767" data-contrast="auto" lang="ZH-TW" xml:lang="ZH-TW"><span class="NormalTextRun BCX8 SCXO144150767">print:列出</span></span></div>
+<div>import:導入 </div>
+<div><span class="TextRun BCX8 SCXO144150767" data-contrast="auto" lang="ZH-TW" xml:lang="ZH-TW"><span class="NormalTextRun BCX8 SCXO144150767">print:列出</span></span></div>
 <div><span class="TextRun BCX8 SCXO144150767" data-contrast="auto" lang="ZH-TW" xml:lang="ZH-TW"><span class="NormalTextRun BCX8 SCXO144150767"><span class="TextRun SCXO162626442 BCX8" data-contrast="auto" lang="ZH-TW" xml:lang="ZH-TW"><span class="NormalTextRun SCXO162626442 BCX8">keyword:關鍵字=</span></span></span></span></div>
 <div><span class="TextRun BCX8 SCXO144150767" data-contrast="auto" lang="ZH-TW" xml:lang="ZH-TW"><span class="NormalTextRun BCX8 SCXO144150767"><span class="TextRun SCXO162626442 BCX8" data-contrast="auto" lang="ZH-TW" xml:lang="ZH-TW"><span class="NormalTextRun SCXO162626442 BCX8"><span class="TextRun BCX8 SCXO69250940" data-contrast="auto" lang="ZH-TW" xml:lang="ZH-TW"><span class="NormalTextRun BCX8 SCXO69250940">['False', 'None', 'True', 'and', 'as', 'assert', 'async', 'await', 'break', 'class', 'continue', 'def', 'del', 'elif', 'else', 'except', 'finally', 'for', 'from', 'global', 'if', 'import', 'in', 'is', 'lambda', 'nonlocal', 'not', 'or', 'pass', 'raise', 'return', 'try', 'while', 'with', 'yield']</span></span></span></span></span></span></div>
+<div>
+<div>float:浮點(函數用於將整數和字符串轉換成浮點數)</div>
+</div>
 <br />溫度轉換 << <a href='溫度轉換.html'>Previous</a> <a href='心得.html'>Next</a> >> 心得</div>
         
     <!-- footer -->
