新增本班考試成績w4到w14

--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -3,6 +3,7 @@
 <p>仔細看這個男人太狠了他居然把網頁名稱取得這麼中二,還把<span>現任臺北市市長的照片放在首頁</span></p>
 <p>41123147蔡承翰</p>
 <p>githib倉儲:<a href="https://github.com/mdecp2022/site-hank474">mdecp2022/site-hank474: site-hank474 created by GitHub Classroom</a></p>
+<p>此網站使用<span> stud 伺服器編寫</span></p>
 <p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/6ffcc2daa0df10df43d672fd0151f109/raw/90d6e812f8706967b47d4d4452bd575a1eeafd9d/%25E6%2596%25B0.cp%25E6%258A%25BD%25E9%25BB%259E"></a></p>
 <div><a href="https://mdecp2022.github.io/site-hank474/content/cp2022?htmlsrc=https://gist.githubusercontent.com/hank474/9f0bf6c173aca573f204eaf3061bb2b7/raw/97d2fc2bb9932ca96e1d927d5c107fb03bdd3b8c/gistfile1.txt"></a></div>
 <p>cmsite: wcms use <a href="https://github.com/mdecycu/cmsimde">https://github.com/mdecycu/cmsimde</a> as submodule</p>
@@ -33,16 +34,32 @@
 <h3>溫度轉換</h3>
 <p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/b543dca427faafa9508ec31e8f6e1e8b/raw/029b1f8b5d1ce03f49f3dbd274b74027b6363f00/w13temp_ex1.py"><span>點這裡執行:</span>w13溫度轉換程式</a>ex1</p>
 <p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/b543dca427faafa9508ec31e8f6e1e8b/raw/cc13a508c73ea94e43dc7203930d197f9b774a9b/w13temp_ex2.py"><span>點這裡執行:</span>w13溫度轉換程式</a>ex2</p>
+<h1>本班考試成績</h1>
+<h3>w4</h3>
+<p>此程式是參考了老師的的(物件導向設計的學員名單與成績擷取)</p>
+<p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/a3c737627e49e66e3497dd30b85e094c/raw/06d39ee4e882e6470df2646fd694fb4be6cfb11c/gistfile1.txt">點這列出w4成績</a></p>
+<h2>w8</h2>
+<p>此程式是參考了老師的的(物件導向設計的學員名單與成績擷取)</p>
+<p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/325dd1e183670185611e70b5cfee49f3/raw/d77c8d982030c76f010a31dd58be273bc757a6d1/gistfile1.txt">點這列出w8成績</a></p>
+<h2>w9</h2>
+<p><span>此程式是參考了老師的的(</span><span>物件導向設計的學員名單與成績擷取)</span></p>
+<p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/916b9fee8fc0bc3623664a74bbd7ea66/raw/1d0896a7c64371e6f0a8ccff2898b33a4f249889/gistfile1.txt">點這列出w9成績</a></p>
+<h2>w10</h2>
+<p><span>此程式是參考了老師的的(</span><span>物件導向設計的學員名單與成績擷取)</span></p>
+<p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/96ac7e7619ab0b0e454149370eb08fd2/raw/d25a1c676f73270ccf1db74e744e2fba2de2ee8c/gistfile1.txt">點這列出w10成績</a></p>
+<h2>w14</h2>
+<p><span>此程式是參考了老師的的(</span><span>物件導向設計的學員名單與成績擷取)</span></p>
+<p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/807f15ed039ff6ad06f332f711e2bc64/raw/0024b37580cfc0c17906397543bfdfc1a899c958/gistfile1.txt">點這列出w14成績</a></p>
 <h1>筆記</h1>
 <div>import:導入 </div>
 <div><span>int:整數(包含零及所有正負整數)</span></div>
 <div><span>變數:(使用變數前須先宣告並賦值)</span></div>
+<div><span>def:定義函數名稱</span></div>
 <div><span class="TextRun BCX8 SCXO144150767" data-contrast="auto" lang="ZH-TW" xml:lang="ZH-TW"><span class="NormalTextRun BCX8 SCXO144150767">print:列出</span></span></div>
 <div><span class="TextRun BCX8 SCXO144150767" data-contrast="auto" lang="ZH-TW" xml:lang="ZH-TW"><span class="NormalTextRun BCX8 SCXO144150767"><span>float:浮點(函數用於將整數和字符串轉換成浮點數)</span></span></span></div>
 <div><span class="TextRun BCX8 SCXO144150767" data-contrast="auto" lang="ZH-TW" xml:lang="ZH-TW"><span class="NormalTextRun BCX8 SCXO144150767"><span class="TextRun SCXO162626442 BCX8" data-contrast="auto" lang="ZH-TW" xml:lang="ZH-TW"><span class="NormalTextRun SCXO162626442 BCX8">keyword:關鍵字=</span></span></span></span></div>
 <div><span class="TextRun BCX8 SCXO144150767" data-contrast="auto" lang="ZH-TW" xml:lang="ZH-TW"><span class="NormalTextRun BCX8 SCXO144150767"><span class="TextRun SCXO162626442 BCX8" data-contrast="auto" lang="ZH-TW" xml:lang="ZH-TW"><span class="NormalTextRun SCXO162626442 BCX8"><span class="TextRun BCX8 SCXO69250940" data-contrast="auto" lang="ZH-TW" xml:lang="ZH-TW"><span class="NormalTextRun BCX8 SCXO69250940">['False', 'None', 'True', 'and', 'as', 'assert', 'async', 'await', 'break', 'class', 'continue', 'def', 'del', 'elif', 'else', 'except', 'finally', 'for', 'from', 'global', 'if', 'import', 'in', 'is', 'lambda', 'nonlocal', 'not', 'or', 'pass', 'raise', 'return', 'try', 'while', 'with', 'yield']</span></span></span></span></span></span></div>
-<div></div>
-<h1>心得</h1>
+<div></div><h1>心得</h1>
 <p><b>労働はクソということです。</b></p>
 <h1>cp2022H1</h1>
 <p>這個頁面 demo 如何在同一頁面下納入多個線上 Ace 編輯器與執行按鈕 (<a href="/downloads/practice_html.txt">practice_html.txt</a> 動態頁面超文件).</p>
