--- a/content/w4.html
+++ b/content/w4.html
@@ -2,7 +2,7 @@
         <head>
         <title>cmsite</title>
         <meta charset="utf-8">
-<meta property="head" content="H2">
+<meta property="head" content="H3">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -141,8 +141,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">密碼亂數 << <a href='密碼亂數.html'>Previous</a> <a href='抽點.html'>Next</a> >> 抽點<br /><h1>W6</h1>
-<br />密碼亂數 << <a href='密碼亂數.html'>Previous</a> <a href='抽點.html'>Next</a> >> 抽點</div>
+    <div id="tipue_search_content">本班考試成績 << <a href='本班考試成績.html'>Previous</a> <a href='w8.html'>Next</a> >> w8<br /><h1>w4</h1>
+<p>此程式是參考了老師的的(物件導向設計的學員名單與成績擷取)</p>
+<p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/a3c737627e49e66e3497dd30b85e094c/raw/06d39ee4e882e6470df2646fd694fb4be6cfb11c/gistfile1.txt">點這列出w4成績</a></p>
+<br />本班考試成績 << <a href='本班考試成績.html'>Previous</a> <a href='w8.html'>Next</a> >> w8</div>
         
     <!-- footer -->
       <div class="container">
