--- a/content/w14.html
+++ b/content/w14.html
@@ -141,8 +141,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">密碼亂數 << <a href='密碼亂數.html'>Previous</a> <a href='抽點.html'>Next</a> >> 抽點<br /><h1>W6</h1>
-<br />密碼亂數 << <a href='密碼亂數.html'>Previous</a> <a href='抽點.html'>Next</a> >> 抽點</div>
+    <div id="tipue_search_content">w10 << <a href='w10.html'>Previous</a> <a href='筆記.html'>Next</a> >> 筆記<br /><h1>w14</h1>
+<p><span>此程式是參考了老師的的(</span><span>物件導向設計的學員名單與成績擷取)</span></p>
+<p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/807f15ed039ff6ad06f332f711e2bc64/raw/0024b37580cfc0c17906397543bfdfc1a899c958/gistfile1.txt">點這列出w14成績</a></p>
+<br />w10 << <a href='w10.html'>Previous</a> <a href='筆記.html'>Next</a> >> 筆記</div>
         
     <!-- footer -->
       <div class="container">
