--- a/content/本班考試成績.html
+++ b/content/本班考試成績.html
@@ -2,7 +2,7 @@
         <head>
         <title>cmsite</title>
         <meta charset="utf-8">
-<meta property="head" content="H2">
+<meta property="head" content="H1">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -141,8 +141,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">密碼亂數 << <a href='密碼亂數.html'>Previous</a> <a href='抽點.html'>Next</a> >> 抽點<br /><h1>W6</h1>
-<br />密碼亂數 << <a href='密碼亂數.html'>Previous</a> <a href='抽點.html'>Next</a> >> 抽點</div>
+    <div id="tipue_search_content">溫度轉換 << <a href='溫度轉換.html'>Previous</a> <a href='w4.html'>Next</a> >> w4<br /><h1>本班考試成績</h1>
+<br />溫度轉換 << <a href='溫度轉換.html'>Previous</a> <a href='w4.html'>Next</a> >> w4</div>
         
     <!-- footer -->
       <div class="container">
