--- a/config/content.htm
+++ b/config/content.htm
@@ -2,10 +2,8 @@
 <p>           <img alt="" height="195" src="/images/20220412005788.jpg" width="253"/>    </p>
 <p>仔細看這個男人太狠了他居然把網頁名稱取得這麼中二,還把<span>現任臺北市市長的照片放在首頁</span></p>
 <p>41123147蔡承翰</p>
+<p><span>此網站使用</span><span> stud 伺服器編寫</span></p>
 <p>githib倉儲:<a href="https://github.com/mdecp2022/site-hank474">mdecp2022/site-hank474: site-hank474 created by GitHub Classroom</a></p>
-<p>此網站使用<span> stud 伺服器編寫</span></p>
-<p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/6ffcc2daa0df10df43d672fd0151f109/raw/90d6e812f8706967b47d4d4452bd575a1eeafd9d/%25E6%2596%25B0.cp%25E6%258A%25BD%25E9%25BB%259E"></a></p>
-<div><a href="https://mdecp2022.github.io/site-hank474/content/cp2022?htmlsrc=https://gist.githubusercontent.com/hank474/9f0bf6c173aca573f204eaf3061bb2b7/raw/97d2fc2bb9932ca96e1d927d5c107fb03bdd3b8c/gistfile1.txt"></a></div>
 <p>cmsite: wcms use <a href="https://github.com/mdecycu/cmsimde">https://github.com/mdecycu/cmsimde</a> as submodule</p>
 <h1>HW</h1>
 <h2>W5</h2>
@@ -59,7 +57,8 @@
 <div><span class="TextRun BCX8 SCXO144150767" data-contrast="auto" lang="ZH-TW" xml:lang="ZH-TW"><span class="NormalTextRun BCX8 SCXO144150767"><span>float:浮點(函數用於將整數和字符串轉換成浮點數)</span></span></span></div>
 <div><span class="TextRun BCX8 SCXO144150767" data-contrast="auto" lang="ZH-TW" xml:lang="ZH-TW"><span class="NormalTextRun BCX8 SCXO144150767"><span class="TextRun SCXO162626442 BCX8" data-contrast="auto" lang="ZH-TW" xml:lang="ZH-TW"><span class="NormalTextRun SCXO162626442 BCX8">keyword:關鍵字=</span></span></span></span></div>
 <div><span class="TextRun BCX8 SCXO144150767" data-contrast="auto" lang="ZH-TW" xml:lang="ZH-TW"><span class="NormalTextRun BCX8 SCXO144150767"><span class="TextRun SCXO162626442 BCX8" data-contrast="auto" lang="ZH-TW" xml:lang="ZH-TW"><span class="NormalTextRun SCXO162626442 BCX8"><span class="TextRun BCX8 SCXO69250940" data-contrast="auto" lang="ZH-TW" xml:lang="ZH-TW"><span class="NormalTextRun BCX8 SCXO69250940">['False', 'None', 'True', 'and', 'as', 'assert', 'async', 'await', 'break', 'class', 'continue', 'def', 'del', 'elif', 'else', 'except', 'finally', 'for', 'from', 'global', 'if', 'import', 'in', 'is', 'lambda', 'nonlocal', 'not', 'or', 'pass', 'raise', 'return', 'try', 'while', 'with', 'yield']</span></span></span></span></span></span></div>
-<div></div><h1>心得</h1>
+<div></div>
+<h1>心得</h1>
 <p><b>労働はクソということです。</b></p>
 <h1>cp2022H1</h1>
 <p>這個頁面 demo 如何在同一頁面下納入多個線上 Ace 編輯器與執行按鈕 (<a href="/downloads/practice_html.txt">practice_html.txt</a> 動態頁面超文件).</p>
