更新本班成績資訊

--- a/content/w4.html
+++ b/content/w4.html
@@ -142,7 +142,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">本班考試成績 << <a href='本班考試成績.html'>Previous</a> <a href='w8.html'>Next</a> >> w8<br /><h1>w4</h1>
-<p>此程式是參考了老師的的(物件導向設計的學員名單與成績擷取)</p>
+<p>此程式是參考了老師的的(物件導向設計的學員名單與成績擷取)程式</p>
 <p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/a3c737627e49e66e3497dd30b85e094c/raw/06d39ee4e882e6470df2646fd694fb4be6cfb11c/gistfile1.txt">點這列出w4成績</a></p>
 <br />本班考試成績 << <a href='本班考試成績.html'>Previous</a> <a href='w8.html'>Next</a> >> w8</div>
         
