--- a/content/w9.html
+++ b/content/w9.html
@@ -142,7 +142,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">w8 << <a href='w8.html'>Previous</a> <a href='w10.html'>Next</a> >> w10<br /><h1>w9</h1>
-<p><span>此程式是參考了老師的的(</span><span>物件導向設計的學員名單與成績擷取)</span></p>
+<p><span>此程式是參考了老師的的(</span><span>物件導向設計的學員名單與成績擷取)程式</span></p>
 <p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/916b9fee8fc0bc3623664a74bbd7ea66/raw/1d0896a7c64371e6f0a8ccff2898b33a4f249889/gistfile1.txt">點這列出w9成績</a></p>
 <br />w8 << <a href='w8.html'>Previous</a> <a href='w10.html'>Next</a> >> w10</div>
         
