--- a/content/w10.html
+++ b/content/w10.html
@@ -142,7 +142,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">w9 << <a href='w9.html'>Previous</a> <a href='w14.html'>Next</a> >> w14<br /><h1>w10</h1>
-<p><span>此程式是參考了老師的的(</span><span>物件導向設計的學員名單與成績擷取)</span></p>
+<p><span>此程式是參考了老師的的(</span><span>物件導向設計的學員名單與成績擷取)程式</span></p>
 <p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/96ac7e7619ab0b0e454149370eb08fd2/raw/d25a1c676f73270ccf1db74e744e2fba2de2ee8c/gistfile1.txt">點這列出w10成績</a></p>
 <br />w9 << <a href='w9.html'>Previous</a> <a href='w14.html'>Next</a> >> w14</div>
         
